# agentic-coding-assistant

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
src/: main.py
src/agent/: flow_builder.py  orchestrator.py
src/backend/app/: main.py
src/backend/app/models/: schemas.py
src/backend/app/routers/: generate.py  health.py  history.py
src/backend/app/services/: agent_service.py
src/frontend/: index.html  package.json  vite.config.ts
src/frontend/src/: App.css  App.tsx
src/frontend/src/api/: client.ts
src/frontend/src/hooks/: useGenerate.ts
src/frontend/src/types/: api.ts
src/harness/: flow_builder.py
tests/: test_agent.py
